# -API

./: .gitignore  config.json  pyproject.toml  report.json  report.txt
api_aggregator/: aggregator.py  config.py  fetcher.py  main.py  models.py  report.py  server.py
